--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "bugs": {
     "url": "https://github.com/tonymedrano/es6-systemjs/issues"
   },
-  "homepage": "https://github.com/tonymedrano/es6-systemjs#readme"
+  "homepage": "https://github.com/tonymedrano/es6-systemjs#readme",
+  "dependencies": {
+    "systemjs": "^0.20.18",
+    "systemjs-plugin-traceur": "0.0.3",
+    "traceur": "0.0.111"
+  }
 }
